--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -52,7 +52,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="MoveBackward",Key=S,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
