--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -53,6 +53,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="TurnRight",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="TurnRight",Key=A,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
