--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A1C890824CEA5795F62D4DBFB8D361CF
+CopyrightNotice=Copyright Gilberto Manunza
+
